# power_manager_api

./: Dockerfile  README.md  pyproject.toml
api/: main.py
api/data/: device_consumption.py  electric_car.py  overall.py
api/db/: crud.py  database.py  models.py  schemas.py
api/endpoints/: devices.py  devices_consumption.py  schedules.py  stats.py
api/migrations/: env.py
api/utils/: utils.py  validators.py
