[tool.poetry]
name = "power-manager-api"
version = "0.5.0"
description = ""
authors = ["Rokas Tarasevičius <rokas.tarasevicius@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"
python-dotenv = "^0.21.0"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
sqlalchemy = "^1.4.42"
psycopg2 = "^2.9.5"
asyncpg = "^0.27.0"
alembic = "^1.8.1"
databases = "^0.6.1"
fastapi-utils = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
